# pgm-service

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yaml
app/: main.py
example/: app.py
example/payment_calculation/: aux_models.py  models.py
example/pgm_powerflow/: aux_models.py  models.py  router.py
example/power_grid/: aux_models.py  models.py  router.py
examples/: cgmes_pgm_converter.py  run_power_flow.py
src/pgm_service/: app.py  main.py  utils.py
src/pgm_service/pgm_powerflow/: aux_models.py  models.py  router.py
src/pgm_service/power_grid/: aux_models.py  cgmes_pgm_converter.py  models.py  power_grid_model.py  router.py
test/: docker-compose.yml  loadflow.py  powerflow.py
test/fileservice/: Dockerfile  fileservice.py
